[FIX] `TextSelectionActivity.equals()` used ``==`` to comapare strings. [API] Removed a constructor from `TextEdirActivity`.